[workspace]
resolver = "2"
members = [
    "crates/vouch-core",
    "crates/vouch-rpc",
    "crates/vouch-pkgbuild",
    "crates/vouch-sandbox",
    "crates/vouch-build",
    "crates/vouch-review",
    "crates/vouch-resolve",
    "crates/vouch-alpm",
    "crates/vouch-ioc",
    "crates/vouch-security",
    "crates/vouch-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Kevin Muñoz <kmunoz@condorbs.net>"]
repository = "https://github.com/TheSL18/vouch"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ureq = { version = "2", default-features = false, features = ["native-tls", "gzip"] }
native-tls = "0.2"
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
regex = "1"
sha2 = "0.10"
similar = "2"

[profile.release]
lto = "thin"
strip = true
