[package]
name = "vouch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "vouch"
path = "src/main.rs"

[dependencies]
vouch-core = { path = "../vouch-core" }
vouch-rpc = { path = "../vouch-rpc" }
vouch-pkgbuild = { path = "../vouch-pkgbuild" }
vouch-security = { path = "../vouch-security" }
vouch-build = { path = "../vouch-build" }
vouch-sandbox = { path = "../vouch-sandbox" }
vouch-review = { path = "../vouch-review" }
vouch-resolve = { path = "../vouch-resolve" }
clap.workspace = true
anyhow.workspace = true
owo-colors.workspace = true
serde_json.workspace = true
